# RustyServer

./: .env  Cargo.toml  Shuttle.toml  archive.tar  package-lock.json  quotes.json
quotes/: quotes.json
src/: .env  main.rs
src/chat/: mod.rs
src/db/: mod.rs  models.rs  user.rs
src/quotes/: mod.rs
src/routes/: index.rs  mod.rs  quote.rs  user.rs
